[tool.poetry]
name = "api-wrappers"
version = "0.1.0"
description = "api wrappers with fastapi"
authors = ["daehyeoni <daehyeoni3333@gmail.com>"]
readme = "README.md"
packages = [
  { include = "*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = {extras = ["standard"], version = "^0.103.2"}
requests = "^2.31.0"

[tool.poetry.scripts]
start = "main:start"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
